--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
+
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^7.4.3|^8.0",
         "ext-pgsql": "*",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -13,7 +14,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
-        "stripe/stripe-php": "^7.113"
+        "stripe/stripe-php": "^7.113",
+        "ext-sqlite3": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
