--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dependencies": {
         "@vue/cli-plugin-unit-jest": "^5.0.1",
         "eslint-plugin-vue": "^8.4.0",
+        "heroku": "^7.59.2",
         "jest": "^27.5.1",
         "jquery": "^3.6.0",
         "jsdom": "^19.0.0",
