--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=192.168.33.3
+DB_HOST=192.168.225.20
 DB_PORT=3306
 DB_DATABASE=cendrassosbnb
-DB_USERNAME=web
-DB_PASSWORD=1234
+DB_USERNAME=admin
+DB_PASSWORD=admin
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
